fix icon spacing in cinn3.4

--- a/theme-src/common/textfiles/cinnamon/_common.scss
+++ b/theme-src/common/textfiles/cinnamon/_common.scss
@@ -792,6 +792,8 @@ $panel_slice: 1 0 0 0; //royale, embedded, zune
   font-family: franklin gothic medium;
   font-weight: normal;
   font-size: 19px;
+
+  .applet-label { margin-left: 6px; }
   
   &:hover { border-image: url('Panel/start-button-hover.png') 0 11 0 6; }
 
